// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli usage snapshots > aai --help 1`] = `
"Voice agent development kit (aai vX.X.X)
USAGE aai init|dev|test|eval|build|list|pull|push|publish|delete|login|secret|logs|workflow|templates
COMMANDS
       init    Scaffold a new agent project
        dev    Start a local development server
       test    Run agent tests
       eval    Run agent behaviour evals against a live model
      build    Bundle agent without deploying
       list    List your studio projects
       pull    Pull a studio project into a local directory
       push    Sync this project's source to its studio workspace
    publish    Push to the studio and deploy to production (the studio's Publish button)
     delete    Delete the studio project and its deployed agents
      login    Link your signed-in browser account and save your API key
     secret    Manage agent secrets
       logs    Show what the deployed agent has printed
   workflow    Inspect and steer durable workflow runs
  templates    List available project templates
Use aai <command> --help for more information about a command."
`;

exports[`cli usage snapshots > aai build --help 1`] = `
"Bundle agent without deploying (build)
USAGE build [OPTIONS]
OPTIONS
           --json    Output JSON (auto-detected in non-TTY)
      --skipTests    Skip running tests before build
  --skipTypecheck    Skip type checking before build"
`;

exports[`cli usage snapshots > aai delete --help 1`] = `
"Delete the studio project and its deployed agents (delete)
USAGE delete [OPTIONS]
OPTIONS
  -s, --server=<server>    Platform server URL
                 --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai deploy --help 1`] = `
"(internal) used by studio Publish (deploy)
USAGE deploy [OPTIONS]
OPTIONS
  -s, --server=<server>    Platform server URL
                 --json    Output JSON (auto-detected in non-TTY)
     --allowPreviewSlug    Permit a \`-preview\`-suffixed slug (reserved for studio auto-previews; studio-internal — a slug you claim this way is subject to the preview reaper)
        --skipTypecheck    Skip type checking before deploy"
`;

exports[`cli usage snapshots > aai dev --help 1`] = `
"Start a local development server (dev)
USAGE dev [OPTIONS]
OPTIONS
  -p, --port=<port>    Port to listen on (Default: 3000)
            --watch    Restart on file changes (also AAI_DEV_WATCH=1)
             --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai eval --help 1`] = `
"Run agent behaviour evals against a live model (eval)
USAGE eval [OPTIONS]
OPTIONS
  --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai init --help 1`] = `
"Scaffold a new agent project (init)
USAGE init [OPTIONS] [DIR]
ARGUMENTS
  DIR    Project directory
OPTIONS
                -f, --force    Overwrite existing files
  -t, --template=<template>    Template to use (run \`aai templates\` for the list)
      -s, --server=<server>    Platform server URL
                  -y, --yes    Accept defaults (no prompts)
                     --json    Output JSON (auto-detected in non-TTY)
               --skipDeploy    Skip deploy after scaffolding"
`;

exports[`cli usage snapshots > aai secret --help 1`] = `
"Manage agent secrets (secret)
USAGE secret put|delete|list
COMMANDS
     put    Create or update a secret (value read from stdin, or prompted on a terminal)
  delete    Delete a secret
    list    List all secrets
Use secret <command> --help for more information about a command."
`;

exports[`cli usage snapshots > aai secret delete --help 1`] = `
"Delete a secret (delete)
USAGE delete [OPTIONS] <NAME>
ARGUMENTS
  NAME    Secret name (Required)
OPTIONS
  -s, --server=<server>    Platform server URL
                 --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai secret list --help 1`] = `
"List all secrets (list)
USAGE list [OPTIONS]
OPTIONS
  -s, --server=<server>    Platform server URL
                 --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai secret put --help 1`] = `
"Create or update a secret (value read from stdin, or prompted on a terminal) (put)
USAGE put [OPTIONS] <NAME>
ARGUMENTS
  NAME    Secret name. The VALUE is not an argument — pipe it in (\`printf %s "$VALUE" | aai secret put NAME\`), or be prompted, masked, when stdin is a terminal (Required)
OPTIONS
  -s, --server=<server>    Platform server URL
                 --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai test --help 1`] = `
"Run agent tests (test)
USAGE test [OPTIONS]
OPTIONS
  --json    Output JSON (auto-detected in non-TTY)
   --all    Run every spec in the project, not just agent.test.ts"
`;
